--- a/hw_7_data_table_jdbc/src/main/resources/templates/pages/students/student_details.html
+++ b/hw_7_data_table_jdbc/src/main/resources/templates/pages/students/student_details.html
@@ -24,11 +24,11 @@
                             <td th:text="${student.getId()}"></td>
                         </tr>
                         <tr>
-                            <th>name</th>
+                            <th>First Name</th>
                             <td th:text="${student.getFirstName()}"></td>
                         </tr>
                         <tr>
-                            <th>age</th>
+                            <th>Last Name</th>
                             <td th:text="${student.getLastName()}"></td>
                         </tr>
                         <tr>
