--- a/hw_7_data_table_jdbc/src/main/resources/templates/pages/students/student_update.html
+++ b/hw_7_data_table_jdbc/src/main/resources/templates/pages/students/student_update.html
@@ -9,39 +9,37 @@
 </head>
 <body>
 
-<div layout:fragment="content">
-
-    <div class="row">
-        <div class="col-12">
-            <div class="card mt-2">
-                <div class="card-header">
-                    <h4>Edit Student</h4>
-                </div>
-                <div class="card-body">
-                    <form action="#" th:action="@{/students/update}" th:object="${student}" method="post">
-                        <div class="form-group">
-                            <label for="name">name</label>
-                            <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter new name" th:field="*{name}">
-                            <label for="age">age</label>
-                            <input type="number" class="form-control" id="age" aria-describedby="age" placeholder="Enter new age" th:field="*{age}">
+    <div layout:fragment="content">
+        <div class="row">
+            <div class="col-12">
+                <div class="card mt-2">
+                    <div class="card-header">
+                        <h4>Edit Student</h4>
+                    </div>
+                    <div class="card-body">
+                        <form action="#" th:action="@{/students/update}" th:object="${student}" method="post">
                             <div class="form-group">
-                                <label for="group">Example select</label>
-                                <select class="form-control" id="group" th:field="*{groupId}">
-                                    <option th:each="group : ${groupsList.items}"
-                                            th:value="${group.getId()}"
-                                            th:text="${group.getName()}">
-                                    </option>
-                                </select>
+                                <label for="firstName">First Name</label>
+                                <input type="text" class="form-control" id="firstName" aria-describedby="firstName" placeholder="Enter new First Name" th:field="*{firstName}">
+                                <label for="lastName">Last Name</label>
+                                <input type="text" class="form-control" id="lastName" aria-describedby="lastName" placeholder="Enter new Last Name" th:field="*{lastName}">
+                                <div class="form-group">
+                                    <label for="group">Group</label>
+                                    <select class="form-control" id="group" th:field="*{groupId}">
+                                        <option th:each="group : ${groupsList.items}"
+                                                th:value="${group.getId()}"
+                                                th:text="${group.getName()}">
+                                        </option>
+                                    </select>
+                                </div>
                             </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-</div>
 
 </body>
 </html>
